--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,11 @@ android {
         enabled = true
         enabledForTests = true
     }
+    // This options rmeoves the manifest warning of robolectric
+    testOptions.unitTests {
+        includeAndroidResources = true
+
+    }
 }
 
 dependencies {
@@ -65,4 +70,12 @@ dependencies {
 
     // Hamcrest
     testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
+
+    // Androidx Test
+    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
+    testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
+
+    // Robolectric
+    testImplementation 'org.robolectric:robolectric:4.3'
+
 }
