--- a/build.gradle
+++ b/build.gradle
@@ -64,4 +64,5 @@ ext {
     hamcrestVersion = "1.3"
     androidXTestCoreVersion = "1.1.0"
     androidXTestExtKotlinRunnerVersion = "1.1.0"
+    archTestingVersion = "2.0.0"
 }
